# automatic-positions-detection-and-scoring-in-jiu-jitsu

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
src/bjjtrack/: utils.py
src/bjjtrack/jiujitsu/: scoring.py  utils.py  vis.py
src/bjjtrack/tracking/: __init__.py  tracker.py  visual_matching.py
src/scripts/: evaluate_positions.py  evaluate_scoring.py  extract_matches.py  jiu-jitsu-auto-scoring-TEST.ipynb  reproduce_scoring_fig.py  run_tracking.py
